# testdet

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  status-2019-10-14.csv  status-2019-10-17.csv  status-2019-10-22.csv  status-2019-10-23.csv  status-2019-10-28.csv  status-2019-10-30.csv  status-2019-10-31.csv  status-2019-11-07.csv
src/: main.rs
