[package]
name = "testdet"
version = "0.1.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.17"
detone = "1.0.0"
chardet = "0.2.4"
unic-normal = "0.9.0"
libc = "0.2.58"
libflate = "0.1.27"
rayon = "1.2.0"
chardetng = { path = "../chardetng/" }