[package]
name = "testdet"
version = "0.1.0"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detone = "1.0.0"
chardet = "0.2.4"
unic-normal = "0.9.0"
libc = "0.2.58"
libflate = "0.1.27"
unicode-reverse = "1.0.8"
rayon = "1.2.0"
regex = "1"

[dependencies.chardetng]
path = "../chardetng/"
features = ["testing-only-no-semver-guarantees-do-not-use"]

[dependencies.encoding_rs]
version = "0.8.17"
features = ["fast-legacy-encode"]
